# video_analytics_detectors

./: CMakeLists.txt  LICENSE  README.md  main.cpp  run_out.sh
assets/videos/: ahah_720.avi
code/: CMakeLists.txt  main.cpp
code/motion_detection/: CMakeLists.txt
code/motion_detection/no_opencv/: CMakeLists.txt
code/motion_detection/object_search/: CMakeLists.txt  abstract_motion_detection.cpp
code/motion_detection/object_search/header/: abstract_motion_detection.h
code/motion_detection/object_search/headers/: abstract_motion_detection.h  no_opencv_detection.h  opencv_detection.h
code/motion_detection/object_search/no_opencv/: CMakeLists.txt
code/motion_detection/object_search/no_opencv/headers/: motion_detection.h
code/motion_detection/object_search/opencv/: CMakeLists.txt
code/motion_detection/object_search/opencv/headers/: opencv_detection.h
code/motion_detection/object_search/src/: abstract_motion_detection.cpp  no_opencv_detection.cpp  opencv_detection.cpp
code/motion_detection/opencv/: CMakeLists.txt
code/motion_detection/opencv/headers/: opencv_detection.h
code/motion_detection/opencv/src/: opencv_detection.cpp
code/motion_detection/trajectory_detection/: CMakeLists.txt
code/motion_detection/trajectory_detection/headers/: object_tracking.h
code/motion_detection/trajectory_detection/src/: object_tracking.cpp
code/trajectory_detection/: CMakeLists.txt
code/trajectory_detection/headers/: object_tracking.h
code/utilities/: CMakeLists.txt
code/utilities/headers/: cast_to_grey.h  constants.h  gaussian_blur.h  geometry.h  protected_map.h
code/utilities/src/: cast_to_grey.cpp  gaussian_blur.cpp  geometry.cpp
code/video_capture/headers/: video_capture.h
code/video_processing/: CMakeLists.txt
code/video_processing/headers/: video_capture.h  video_processing.h  video_writing.h
code/video_processing/src/: video_processing.cpp  video_writing.cpp
code/video_writer/: CMakeLists.txt
code/video_writer/headers/: video_writing.h
code/video_writer/src/: video_writing.cpp
video_capture/: CMakeLists.txt
video_capture/headers/: abstract_video_capture.h  read_video_from_file.h
video_capture/src/: abstract_video_capture.cpp
